service.yaml
apiVersion: v1
kind: Service
metadata:
  name: space-game-service-flux
spec:
  selector:
    app: space-game-flux
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
