ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: space-game-ingress-flux
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    external-dns.alpha.kubernetes.io/hostname: weasel-invader.k8sdevaccessito.uk
    external-dns.alpha.kubernetes.io/target: 363816c4-f484-416a-934b-6a0db068cc5a.cfargotunnel.com
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: weasel-invader.k8sdevaccessito.uk
    http:
      paths:
      - path: /space-game-flux
        pathType: Prefix
        backend:
          service:
            name: space-game-service-flux
            port:
              number: 80
